@@ -7,3 +7,4 @@
 2010,24,20,30,32
 2012,22,28,24,24
 2013,26,26,24,30
+2014,22,22,20,24
