@@ -1,34 +1,36 @@
 library( LFPStreamKeepersData )
 
-bibiScoringData = list( y2006 = list(lyon35th = readScoringXls( "extdata/BIBI/2006/Lyon_at_35th_Scoring_2006.xls" ),
-									 lyon178th = readScoringXls( "extdata/BIBI/2006/Lyon_at_Fiene_Scoring_2006.xls" ),
-									 mcAleerAcres = readScoringXls( "extdata/BIBI/2006/McAleer_Creek_at_Animal_Acres_Scoring_2006.xls" ),
-									 mcAleerPerkins = readScoringXls( "extdata/BIBI/2006/McAleer_Creek_at_Perkins_Scoring_2006.xls" )),
+bibiScoringData = list(
 
-						y2007 = list(lyon35th = readScoringXls( "extdata/BIBI/2007/Lyon_Creek_35th_Scoring_2007.xls" ),
-									 lyon178th = readScoringXls( "extdata/BIBI/2007/Lyon_Creek_Fiene_Scoring_2007.xls" ),
-									 mcAleerAcres = readScoringXls( "extdata/BIBI/2007/McAleer_Creek_Animal_Acres_Scoring_2007.xls" ),
-									 mcAleerPerkins = readScoringXls( "extdata/BIBI/2007/McAleer_Creek_Perkins_Way_Scoring_2007.xls" )),
+y2006 = list(lyon35th = readScoringXls( "extdata/BIBI/2006/Lyon_at_35th_Scoring_2006.xls" ),
+lyon178th = readScoringXls( "extdata/BIBI/2006/Lyon_at_Fiene_Scoring_2006.xls" ),
+mcAleerAcres = readScoringXls( "extdata/BIBI/2006/McAleer_Creek_at_Animal_Acres_Scoring_2006.xls" ),
+mcAleerPerkins = readScoringXls( "extdata/BIBI/2006/McAleer_Creek_at_Perkins_Scoring_2006.xls" )),
 
-						y2008 = list(lyon35th = readScoringXls( "extdata/BIBI/2008/Lyons\ Creek\ at\ 35\ 2008\ Scoring.xls" ),
-					 	  			 lyon178th = readScoringXls( "extdata/BIBI/2008/Lyon\ at\ Fienes\ 2008\ Scoring.xls" ),
-									 mcAleerAcres = readScoringXls( "extdata/BIBI/2008/McAleer\ Creek\ at\ Animal\ Acres\ 2008\ Scoring.xls" ),
-									 mcAleerPerkins = readScoringXls( "extdata/BIBI/2008/McAleer\ at\ Perkins\ 2008\ Scoring.xls" )),
+y2007 = list(lyon35th = readScoringXls( "extdata/BIBI/2007/Lyon_Creek_35th_Scoring_2007.xls" ),
+lyon178th = readScoringXls( "extdata/BIBI/2007/Lyon_Creek_Fiene_Scoring_2007.xls" ),
+mcAleerAcres = readScoringXls( "extdata/BIBI/2007/McAleer_Creek_Animal_Acres_Scoring_2007.xls" ),
+mcAleerPerkins = readScoringXls( "extdata/BIBI/2007/McAleer_Creek_Perkins_Way_Scoring_2007.xls" )),
 
-						y2009 = list(lyon35th = readScoringXls( "extdata/BIBI/2009/Lyon\ Creek\ at\ 35th\ Ave\ Scoring\ 2009.xls" ),
-									 lyon178th = readScoringXls( "extdata/BIBI/2009/Lyon\ Creek\ at\ Fienes\ Scoring\ 2009.xls" ),
-									 mcAleerAcres = readScoringXls( "extdata/BIBI/2009/McAleer\ Creek\ at\ Animal\ Acres\ Scoring\ 2009.xls" ),
-									 mcAleerPerkins = readScoringXls( "extdata/BIBI/2009/McAleer\ Creek\ at\ Perkins\ Scoring\ 2009.xls" )),
+y2008 = list(lyon35th = readScoringXls( "extdata/BIBI/2008/Lyons\ Creek\ at\ 35\ 2008\ Scoring.xls" ),
+lyon178th = readScoringXls( "extdata/BIBI/2008/Lyon\ at\ Fienes\ 2008\ Scoring.xls" ),
+mcAleerAcres = readScoringXls( "extdata/BIBI/2008/McAleer\ Creek\ at\ Animal\ Acres\ 2008\ Scoring.xls" ),
+mcAleerPerkins = readScoringXls( "extdata/BIBI/2008/McAleer\ at\ Perkins\ 2008\ Scoring.xls" )),
 
-						y2010 = list(lyon35th = readScoringXls( "extdata/BIBI/2010/Lyon\ Creek\ at\ 35th\ Ave\ Scoring\ 2010.xls" ),
-									 lyon178th = readScoringXls( "extdata/BIBI/2010/Lyon\ Creek\ at\ Fienes\ Scoring\ 2010.xls" ),
-									 mcAleerAcres = readScoringXls( "extdata/BIBI/2010/McAleer\ Creek\ at\ Animal\ Acres\ Scoring\ 2010.xls" ),
-									 mcAleerPerkins = readScoringXls( "extdata/BIBI/2010/McAleer\ Creek\ at\ Perkins\ Scoring\ 2010.xls" )),
+y2009 = list(lyon35th = readScoringXls( "extdata/BIBI/2009/Lyon\ Creek\ at\ 35th\ Ave\ Scoring\ 2009.xls" ),
+lyon178th = readScoringXls( "extdata/BIBI/2009/Lyon\ Creek\ at\ Fienes\ Scoring\ 2009.xls" ),
+mcAleerAcres = readScoringXls( "extdata/BIBI/2009/McAleer\ Creek\ at\ Animal\ Acres\ Scoring\ 2009.xls" ),
+mcAleerPerkins = readScoringXls( "extdata/BIBI/2009/McAleer\ Creek\ at\ Perkins\ Scoring\ 2009.xls" )),
 
-						y2012= list( lyon35th =       readScoringXls( "extdata/BIBI/2012/Lyons\ Creek\ at\ 35th\ 2012\ Scoring.xlsx" ),
-									 lyon178th =      readScoringXls( "extdata/BIBI/2012/Lyons\ Creek\ at\ 178th\ 2012\ Scoring.xlsx" ),
-									 mcAleerAcres =   readScoringXls( "extdata/BIBI/2012/Animal_Acres_2012_Scoring.xlsx" ),
-									 mcAleerPerkins = readScoringXls( "extdata/BIBI/2012/perkins\ way\ 2012\ Scoring.xlsx" )))
-								
-#can we look at 2011 data and see if it is showing same stuff?
+y2010 = list(lyon35th = readScoringXls( "extdata/BIBI/2010/Lyon\ Creek\ at\ 35th\ Ave\ Scoring\ 2010.xls" ),
+lyon178th = readScoringXls( "extdata/BIBI/2010/Lyon\ Creek\ at\ Fienes\ Scoring\ 2010.xls" ),
+mcAleerAcres = readScoringXls( "extdata/BIBI/2010/McAleer\ Creek\ at\ Animal\ Acres\ Scoring\ 2010.xls" ),
+mcAleerPerkins = readScoringXls( "extdata/BIBI/2010/McAleer\ Creek\ at\ Perkins\ Scoring\ 2010.xls" )),
+
+y2012= list( lyon35th =       readScoringXls( "extdata/BIBI/2012/Lyons\ Creek\ at\ 35th\ 2012\ Scoring.xlsx" ),
+lyon178th =      readScoringXls( "extdata/BIBI/2012/Lyons\ Creek\ at\ 178th\ 2012\ Scoring.xlsx" ),
+mcAleerAcres =   readScoringXls( "extdata/BIBI/2012/Animal_Acres_2012_Scoring.xlsx" ),
+mcAleerPerkins = readScoringXls( "extdata/BIBI/2012/perkins\ way\ 2012\ Scoring.xlsx" )))
+
+##can we look at 2011 data and see if it is showing same stuff?
 
