@@ -3,7 +3,8 @@ NEWS/Change Log for LFPStreamKeepersData package
 
 0.3-2 2015-01-17
       o Added winter 2015 Quality Data
-      o Added Fall 2014 BIBI Data
+      o Added Fall 2014 BIBI Data spreadsheets
+      o Added Fall 2014 BIBI Data to bibiSummaryData.csv
 
 0.3-1 2014-10-21
       o Added summer 2014 Quality Data
